# skai-fastmcp-cloudrun

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CLAUDE_CLI_MCP_TEST_RESULTS.md  CLAUDE_CLI_TEST_RESULTS.md  CLOUD_RUN_HTTP_TESTING_SUCCESS.md  COMPLIANCE_DASHBOARD.html  DATABASE_SETUP.md  DATA_POPULATION_GUIDE.md  DEPLOYMENT.md  DEPLOYMENT_COMPLETE_IAM_FIX.md  DEPLOYMENT_FEATURE_018_COMPLETE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_READY.md  DEPLOYMENT_STATUS_DASHBOARD.md  DEPLOYMENT_STATUS_REPORT.md  DEPLOYMENT_SUMMARY.md  DRY_RUN_SUMMARY.md  Dockerfile  FASTMCP_DOCUMENTATION_REVIEW.md  FEATURE_017_SESSION_SUMMARY.md  FEATURE_018_COMPLETE.md  FEATURE_018_COMPLETION_SUMMARY.md  FEATURE_018_DEPLOYMENT_CHECKLIST.md  FEATURE_018_DEPLOYMENT_COMPLETE.md  FEATURE_018_DEPLOYMENT_GUIDE.md  FINAL_DEPLOYMENT_SUMMARY.md  FINAL_DEPLOYMENT_TEST_SUMMARY.md  GEMINI_MCP_TESTING_SUMMARY.md  GITHUB_ACCESS_CONTROL_UPDATE.md  GRANT_CLOUD_RUN_PERMISSIONS.md  GRANT_CLOUD_RUN_PERMISSIONS.sql  GRANT_IAM_PERMISSIONS.md  HOW_TO_TRANSFER_OWNERSHIP.md  IAM_AUTH_FIX_SUMMARY.md  IAM_DEPLOYMENT_READY.md  IAM_SETUP_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INFRASTRUCTURE_SETUP.md  (+133 more)
.gemini/: settings.json
.github/: SETUP_OAUTH.md  copilot-instructions.md  secrets-template.md
.github/workflows/: deploy-cloud-run.yml  test.yml
.specify/memory/: constitution-compact.md  constitution.md
data/: CONVERSION_SUMMARY.md
data/hansard_converted/: 267506-2024-05-28-129006.md  267506-2024-05-30-129212.md  267506-2024-05-30-129241.md  267506-2024-06-03-129345.md  267506-2024-06-03-129418.md  267506-2024-06-05-129685.md  267506-2024-06-05-129712.md  267506-2024-06-24-130028.md  267506-2024-06-26-130237.md  267506-2024-06-26-130290.md  267506-2024-06-26-130312.md  267506-2024-07-01-130445.md  267506-2024-07-01-130568.md  267506-2024-07-03-130745.md  267506-2024-07-03-130812.md  267506-2024-07-04-130904.md  267506-2024-08-12-130961.md  267506-2024-08-12-131083.md  267506-2024-08-13-131179.md  267506-2024-08-13-131195.md  267506-2024-08-14-131263.md  267506-2024-08-19-131521.md  267506-2024-08-19-131584.md  267506-2024-08-20-131707.md  267506-2024-08-21-131837.md  267506-2024-08-22-131891.md  267506-2024-09-09-132047.md  267506-2024-09-09-132065.md  267506-2024-09-11-132354.md  267506-2024-10-08-132507.md  267506-2024-10-08-132536.md  267506-2024-10-10-132758.md  267506-2024-11-05-133062.md  267506-2024-11-05-133077.md  267506-2024-11-05-133131.md  267506-2024-11-06-133222.md  267506-2024-11-07-133378.md  267506-2024-11-19-133633.md  267506-2024-11-26-134092.md  267506-2025-02-06-134577.md  (+24 more)
data/hansard_reps/: 267506-2024-05-28-129006.md  267506-2024-05-30-129212.md  267506-2024-05-30-129241.md  267506-2024-06-03-129345.md  267506-2024-06-03-129418.md  267506-2024-06-05-129685.md  267506-2024-06-05-129712.md  267506-2024-06-24-130028.md  267506-2024-06-26-130237.md  267506-2024-06-26-130290.md  267506-2024-06-26-130312.md  267506-2024-07-01-130445.md  267506-2024-07-01-130568.md  267506-2024-07-03-130745.md  267506-2024-07-03-130812.md  267506-2024-07-04-130904.md  267506-2024-08-12-130961.md  267506-2024-08-12-131083.md  267506-2024-08-13-131179.md  267506-2024-08-13-131195.md  267506-2024-08-14-131263.md  267506-2024-08-19-131521.md  267506-2024-08-19-131584.md  267506-2024-08-20-131707.md  267506-2024-08-21-131837.md  267506-2024-08-22-131891.md  267506-2024-09-09-132047.md  267506-2024-09-09-132065.md  267506-2024-09-11-132354.md  267506-2024-10-08-132507.md  267506-2024-10-08-132536.md  267506-2024-10-10-132758.md  267506-2024-11-05-133062.md  267506-2024-11-05-133077.md  267506-2024-11-05-133131.md  267506-2024-11-06-133222.md  267506-2024-11-07-133378.md  267506-2024-11-19-133633.md  267506-2024-11-26-134092.md  267506-2025-02-06-134577.md  (+24 more)
data/sk-hansard/: 267506-2024-05-28-129006.md  267506-2024-05-30-129212.md  267506-2024-05-30-129241.md  267506-2024-06-03-129345.md  267506-2024-06-03-129418.md  (+59 more)
deployment/: .dockerignore  CUSTOM_DOMAIN_SETUP.md  docker-compose.yml  healthcheck.py
docs/: FUTURE_ENHANCEMENTS.md  OAUTH_TESTING.md  chatgpt-oauth-setup.md  create-iam-user-cloud-console.md  mcp-tools-future-design.md
monitoring/: uptime-check.yaml
scripts/: add_missing_columns.py  bulk_ingest_to_cloudrun.py  check_database.py  check_image_size.sh  chunk_existing_speeches.py  clear_database.py  complete-setup.sh  convert_hansard_frontmatter.py  drop_and_recreate_table.py  drop_hansard_table.py  enable-cloudrun-api.sh  fix_speech_chunks_table.py  generate_ingest_commands.sh  generate_secrets.py  grant-iam-permissions.py  grant_iam_permissions.py  ingest_hansard.py  ingest_hansard_jsonb.py  ingest_hansard_markdown.py  ingest_hansard_v2.py  init_database.py  init_fresh_table.py  init_hansard_db_v2.sql  init_langchain_schema.py  init_schema.py  init_schema_direct.py  init_schema_simple.py  init_schema_with_password.py  list_and_drop_hansard_tables.py  migrate-custom-domain.sh  migrate_to_langchain_postgres.py  populate_hansard_db.py  populate_hansard_speeches.py  setup-cloudsql.sh  setup-github-secrets.sh  setup_db_service_accounts.py  start_cloud_sql_proxy.sh  stop_cloud_sql_proxy.sh  t001_t004_setup_database.py  test_converted_files.py
src/: __init__.py  config.py  server.py
tests/: test_cloud_run_iam_auth.py  test_cloud_sql_iam_auth.py  test_db_connection_tdd.py  test_full_ingestion_tdd.py  test_iam_error_handling.py  test_local_iam_auth.py  test_mcp_async_best_practices.py  test_oauth_config_tdd.py
tools/: check_cloud_run_sa_iam.sh  patch_cloud_run_env_use_iam_auth.sh  remove_db_password_envs.sh
(+277 files in other folders)
